# CDB

./: AGENT.md  Makefile  README.md  pyproject.toml  requirements.txt  smart.db  smart.db-shm  smart.db-wal
scripts/: streak_demo.sh
src/: __init__.py  main_cli.py
src/app/: __init__.py  main.py  main_window.py
src/core/: __init__.py
src/core/dataframes/: __init__.py  schemas.py
src/core/services/: __init__.py  points.py  progress.py  streaks.py
src/core/types/: __init__.py  dtos.py  enums.py
src/core/usecases/: __init__.py  log_session.py
src/entrypoints/: __init__.py  main_cli.py
src/infrastructure/: __init__.py
src/infrastructure/persistence/: __init__.py
src/infrastructure/persistence/sqlite/: __init__.py  database.py  item_repo.py  session_repo.py
src/interface_adapters/: __init__.py
src/interface_adapters/presenters/: __init__.py  session_presenter.py
src/interface_adapters/ui/: __init__.py  dashboard_table.py  entry_form.py
src/interface_adapters/ui/models/: __init__.py  delegates.py  table_model.py
src/interface_adapters/ui/widgets/: __init__.py  (+3 more)
src/ports/: __init__.py  repositories.py
src/practice_tracker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/usecases/: log_session.py
tests/integration/: test_session_roundtrip_sqlite.py  test_sqlite_repos.py
tests/unit/: test_dtos.py  test_enums.py  test_points.py  test_progress.py  test_schemas.py  test_streaks.py  test_usecase_log_session.py
tests/unit/interface adapters/: test_session_presenter.py
tests/unit/interface_adapters/: test_session_presenter.py
